2006-10-31  Matthieu Nottale  <nottale@gostai.com>

	up libport, add $prefix/include to compile path in param.mk

	* sdk/param.mk.in: add $prefix/include to compile path.

2006-10-26  Akim Demaille  <akim@lrde.epita.fr>

	Formatting changes
	* src/liburbi/uobject/uobject.cc: Do that.

2006-10-26  Akim Demaille  <akim@lrde.epita.fr>

	Use libport/singleton-ptr
	* src/liburbi/uobject/uobject.template.h: Do that.
	And formatting changes.

2006-10-26  Akim Demaille  <akim@lrde.epita.fr>

	use libport/fwd.hh
	* src/liburbi/usyncclient.h: Do that.
	Protect against multiple inclusion.
	* src/liburbi/uabstractclient.h: Idem.

2006-10-24  Akim Demaille  <demaille@gostai.com>

	use libport/ufloat.h
	* src/liburbi/uobject/uobject.template.h: Do that.
	Reindent.

2006-10-24  Akim Demaille  <demaille@gostai.com>

	use libport/ufloat.hh
	* src/liburbi/ufloat.h, src/liburbi/ufloat.cc: Remove.
	* src/liburbi/uobject/Makefile.am: Adjust.
	* src/liburbi/uobject/uobject.template.h: Include ufloat if
	HAVE_LIBPORT_UFLOAT_HH is defined.
	* configure.ac: Invoke URBI_UFLOAT.

2006-10-24  Akim Demaille  <demaille@gostai.com>

	Use libport/libport.mk
	* Makefile.am: Include it.
	* src/liburbi/Makefile.am: Stop doing its job.

2006-10-24  Akim Demaille  <demaille@gostai.com>

	Formatting changes
	* src/liburbi/uobject/uvar.cc: Do that.
	* src/liburbi/uobject/common_uvalue.cc: And do it again.

2006-10-21  Akim Demaille  <akim.demaille@free.fr>

	Updates
	* src/liburbi/uobject/common_uvalue.cc: Formatting changes.

2006-10-21  Akim Demaille  <demaille@gostai.com>

	Formatting changes.
	* src/liburbi/uclient.cpp: Do that.
	* src/liburbi/uclient.h: Do this.
	* src/liburbi/uobject/common_uvalue.cc: Do it again.
	Remove useless parens.

2006-10-20  Matthieu Nottale  <nottale@gostai.com>

	Add UVar::operator= (UValue). Change data to unsigned char* in UImage

	* src/liburbi/uconversion.cpp: Fix.
	* src/liburbi/uobject/uobject.template.h: Do it.
	* src/liburbi/uobject/common_uvalue.cc: Do it.
